<resources>
    <string name="app_name">Messenger</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>


</resources>
