<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:background="@drawable/rounded_edittext_register"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email_address" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/email"/>
    <EditText
            android:layout_width="347dp"
            android:layout_height="wrap_content"

            android:background="@drawable/rounded_edittext_register"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password"
            android:hint="@string/password" tools:layout_editor_absoluteY="88dp" tools:layout_editor_absoluteX="32dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"

            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:id="@+id/btn_login" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/create_new_account"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:id="@+id/tv_register_link" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:textColor="@android:color/white" android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>