<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" android:background="@color/colorAccent" android:id="@+id/parentRegister">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/et_password"
            android:background="@drawable/rounded_edittext_register"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:inputType="textPassword"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/et_email"
            android:background="@drawable/rounded_edittext_register"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name_main"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/et_user_name_main"
            android:background="@drawable/rounded_edittext_register"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_select_image"/>

    <de.hdodenhof.circleimageview.CircleImageView android:layout_width="150dp" android:layout_height="150dp"
                                                  android:id="@+id/civ_profilePic"
                                                  app:layout_constraintEnd_toEndOf="parent"
                                                  android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                                                  app:layout_constraintStart_toStartOf="parent"
                                                  android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                                                  android:layout_marginTop="8dp"
                                                  app:layout_constraintTop_toTopOf="parent"
                                                  android:layout_marginBottom="8dp"
                                                  app:layout_constraintBottom_toTopOf="@+id/et_user_name_main"/>

    <Button
            android:text="@string/register"
            android:layout_width="0dp"
            android:textColor="@android:color/white"

            android:background="@drawable/rounded_button"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" style="@style/Widget.AppCompat.Button.Borderless"/>
    <TextView
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_link" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" android:layout_marginTop="32dp"
            android:textColor="@android:color/white" android:textStyle="bold" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
    <Button
            android:text="Select Photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/btn_select_image"
            android:background="@drawable/rounded_select_photo_button"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/et_user_name_main" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
</android.support.constraint.ConstraintLayout>